List for former player implemented partially

--- a/FodboldApp/FodboldApp/FodboldApp/Pages/History.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/Pages/History.xaml
@@ -5,12 +5,11 @@
     <ContentPage.Content>
 
         <StackLayout>
-            <Label Text="Historik" TextColor="#243F73" FontSize="Large" VerticalOptions="Center" 
+            <Label Text="HISTORIK" TextColor="#243F73" FontSize="Large" VerticalOptions="Center" 
            HorizontalOptions="Center"/>
 
-            <Grid VerticalOptions="FillAndExpand" ColumnSpacing="5" RowSpacing="5">
+            <Grid VerticalOptions="FillAndExpand" RowSpacing="2" ColumnSpacing="5">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
@@ -25,78 +24,74 @@
                 <!--Implement a user control for the players instead of coding the same several times-->
                 <Grid x:Name="grid_Element0" Grid.Row="0" Grid.Column="0">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="75*" />
+                        <RowDefinition Height="25*" />
                     </Grid.RowDefinitions>
-                    <BoxView Color="White" Grid.Column="0" Grid.RowSpan="4"/>
+                    <BoxView Color="White" Grid.Column="0" Grid.RowSpan="1"/>
                     <Image Source="tidligere_spillere.png" Grid.Row="0"/>
+                    <Label Text="Tidligere spillere" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
                 </Grid>
-                <Label Text="Tidligere spillere" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center"/>
                 
                 <!--===============================================================-->
 
                 <!--Second element in scrollable grid-->
                 <Grid Grid.Row="0" Grid.Column="1">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="75*" />
+                        <RowDefinition Height="25*" />
                     </Grid.RowDefinitions>
-                    <BoxView Color="White" Grid.Column="0" Grid.RowSpan="4"/>
-                    <Image Source="aarets_spiller.png" Grid.Row="0" HeightRequest="50"/>
+                    <BoxView Color="White" Grid.Column="0" Grid.RowSpan="1"/>
+                    <Image Source="aarets_spiller.png" Grid.Row="0"/>
+                    <Label Text="Årets spiller" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
                 </Grid>
-                <Label Text="Årets spiller" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center" Grid.Column="1" Margin="0,20,0,0"/> 
                 <!--===============================================================-->
 
                 <!--Third element in scrollable grid-->
                 <Grid Grid.Row="1" Grid.Column="0">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="75*" />
+                        <RowDefinition Height="25*" />
                     </Grid.RowDefinitions>
-                    <BoxView Color="White" Grid.Column="0" Grid.RowSpan="4"/>
+                    <BoxView Color="White" Grid.Column="0" Grid.RowSpan="1"/>
                     <Image Source="tidligere_kampe.png" Grid.Row="0"/>
+                    <Label Text="Tidligere kampe" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
                 </Grid>
-                <Label Text="Tidligere kampe" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center"/>
                 <!--===============================================================-->
 
                 <!--Fourth element in scrollable grid-->
                 <Grid Grid.Row="1" Grid.Column="1">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="75*" />
+                        <RowDefinition Height="25*" />
                     </Grid.RowDefinitions>
-                    <BoxView Color="White" Grid.Column="0" Grid.RowSpan="4"/>
+                    <BoxView Color="White" Grid.Column="0" Grid.RowSpan="1"/>
                     <Image Source="historisk_placering.png" Grid.Row="0"/>
+                    <Label Text="Historisk placering" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
                 </Grid>
-                <Label Text="Historisk placering" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center"/>
                 <!--===============================================================-->
 
                 <!--Fifth element in scrollable grid-->
                 <Grid Grid.Row="2" Grid.Column="0">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="75*" />
+                        <RowDefinition Height="25*" />
                     </Grid.RowDefinitions>
-                    <BoxView Color="White" Grid.Column="0" Grid.RowSpan="4"/>
+                    <BoxView Color="White" Grid.Column="0" Grid.RowSpan="1"/>
                     <Image Source="mangekampe.png" Grid.Row="0"/>
+                    <Label Text="Over 100 kampe" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
                 </Grid>
-                <Label Text="Over 100 kmape" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center"/>
                 <!--===============================================================-->
 
                 <!--Sixth element in scrollable grid-->
                 <Grid Grid.Row="2" Grid.Column="1">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
+                        <RowDefinition Height="75*" />
+                        <RowDefinition Height="25*" />
                     </Grid.RowDefinitions>
-                    <BoxView Color="White" Grid.Column="0" Grid.RowSpan="4"/>
-                    <Image Source="mangemaal.png" MinimumHeightRequest="100" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"/>
+                    <BoxView Color="White" Grid.Column="0" Grid.RowSpan="1"/>
+                    <Image Source="mangemaal.png" Grid.Row="0"/>
+                    <Label Text="Over 50 mål" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
                 </Grid>
-                <Label Text="Over 50 mål" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center"/>
                 <!--===============================================================-->
 
             </Grid>
