--- a/FodboldApp/FodboldApp/FodboldApp/Pages/History.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/Pages/History.xaml
@@ -20,9 +20,9 @@
                 </Grid.ColumnDefinitions>
 
                 <!--===============================================================-->
-                <!--First element in scrollable grid-->
+                <!--First element in grid-->
                 <!--Implement a user control for the players instead of coding the same several times-->
-                <Grid x:Name="grid_Element0" Grid.Row="0" Grid.Column="0">
+                <Grid Grid.Row="0" Grid.Column="0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="75*" />
                         <RowDefinition Height="25*" />
@@ -30,11 +30,14 @@
                     <BoxView Color="White" Grid.Column="0" Grid.RowSpan="1"/>
                     <Image Source="tidligere_spillere.png" Grid.Row="0"/>
                     <Label Text="Tidligere spillere" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="FormerPlayers_Tapped" NumberOfTapsRequired="1"/>
+                    </Grid.GestureRecognizers>
                 </Grid>
-                
+
                 <!--===============================================================-->
 
-                <!--Second element in scrollable grid-->
+                <!--Second element in grid-->
                 <Grid Grid.Row="0" Grid.Column="1">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="75*" />
@@ -46,7 +49,7 @@
                 </Grid>
                 <!--===============================================================-->
 
-                <!--Third element in scrollable grid-->
+                <!--Third element in grid-->
                 <Grid Grid.Row="1" Grid.Column="0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="75*" />
@@ -58,7 +61,7 @@
                 </Grid>
                 <!--===============================================================-->
 
-                <!--Fourth element in scrollable grid-->
+                <!--Fourth element in grid-->
                 <Grid Grid.Row="1" Grid.Column="1">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="75*" />
@@ -70,7 +73,7 @@
                 </Grid>
                 <!--===============================================================-->
 
-                <!--Fifth element in scrollable grid-->
+                <!--Fifth element in grid-->
                 <Grid Grid.Row="2" Grid.Column="0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="75*" />
@@ -82,7 +85,7 @@
                 </Grid>
                 <!--===============================================================-->
 
-                <!--Sixth element in scrollable grid-->
+                <!--Sixth element in grid-->
                 <Grid Grid.Row="2" Grid.Column="1">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="75*" />
