--- a/FodboldApp/FodboldApp/FodboldApp/Pages/NewsPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/Pages/NewsPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FodboldApp.Pages.NewsPage">
+             x:Class="FodboldApp.Pages.NewsPage"
+             ControlTemplate="{StaticResource MainPageTemplate}">
     <ContentPage.Content>
         <ScrollView Orientation="Vertical"
                     VerticalOptions="FillAndExpand">
