--- a/FodboldApp/FodboldApp/FodboldApp/Pages/FrontPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/Pages/FrontPage.xaml
@@ -2,26 +2,39 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:FodboldApp"
-             BackgroundColor="#005A31"
+             BackgroundImage="frontpage_background.png"
              x:Class="FodboldApp.FrontPage">
 
     <ContentPage.Content>
         <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
-            <Label Text="Intern App til sportsklub"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-
-            <ListView x:Name="clubList" BackgroundColor="#007741" >
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <TextCell Text="{Binding ClubName}" TextColor="Black" />
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+      
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="12.5*" />
+                    <ColumnDefinition Width="75*" />
+                    <ColumnDefinition Width="12.5*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <ListView x:Name="clubList" BackgroundColor="White" HorizontalOptions="Center" Grid.Row="0" Grid.Column="1">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Label Text="{Binding ClubName}" TextColor="Black" HorizontalTextAlignment="Center" VerticalTextAlignment="Center">
+                                    <Label.GestureRecognizers>
+                                        <TapGestureRecognizer Tapped="OnItemSelected"/>
+                                    </Label.GestureRecognizers>
+                                </Label>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
 
             <Button x:Name="continueBtn" Text="Næste"
                 HorizontalOptions="Center"
-                VerticalOptions="CenterAndExpand" />
+                VerticalOptions="Center" />
         </StackLayout>
     </ContentPage.Content>
 
