--- a/FodboldApp/FodboldApp/FodboldApp/MainPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/MainPage.xaml
@@ -26,7 +26,7 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <StackLayout Spacing="0" Grid.Column="0" BackgroundColor="White">
+            <StackLayout x:Name="news" Spacing="0" Grid.Column="0" BackgroundColor="White">
                 <controls:TintedImage x:Name="tintedImage_News" Source="nyheder.png"  HeightRequest="30"/>
                 <StackLayout.GestureRecognizers>
                     <TapGestureRecognizer Tapped="News_Tapped"/>
