--- a/FodboldApp/FodboldApp/FodboldApp/Pages/History.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/Pages/History.xaml
@@ -31,7 +31,7 @@
                     <Image Source="tidligere_spillere.png" Grid.Row="0"/>
                     <Label Text="Tidligere spillere" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
                     <Grid.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="FormerPlayers_Tapped" NumberOfTapsRequired="1"/>
+                        <TapGestureRecognizer Tapped="FormerPlayers_Tapped"/>
                     </Grid.GestureRecognizers>
                 </Grid>
 
@@ -46,6 +46,9 @@
                     <BoxView Color="White" Grid.Column="0" Grid.RowSpan="1"/>
                     <Image Source="aarets_spiller.png" Grid.Row="0"/>
                     <Label Text="Årets spiller" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="POTY_Tapped" />
+                    </Grid.GestureRecognizers>
                 </Grid>
                 <!--===============================================================-->
 
