--- a/FodboldApp/FodboldApp/FodboldApp/Pages/History.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/Pages/History.xaml
@@ -85,6 +85,9 @@
                     <BoxView Color="White" Grid.Column="0" Grid.RowSpan="1"/>
                     <Image Source="mangekampe.png" Grid.Row="0"/>
                     <Label Text="Over 100 kampe" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OverHundredGames_Tapped" />
+                    </Grid.GestureRecognizers>
                 </Grid>
                 <!--===============================================================-->
 
@@ -97,6 +100,9 @@
                     <BoxView Color="White" Grid.Column="0" Grid.RowSpan="1"/>
                     <Image Source="mangemaal.png" Grid.Row="0"/>
                     <Label Text="Over 50 mål" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OverFiftyGoals_Tapped" />
+                    </Grid.GestureRecognizers>
                 </Grid>
                 <!--===============================================================-->
 
