--- a/FodboldApp/FodboldApp/FodboldApp/View/History.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/History.xaml
@@ -73,6 +73,9 @@
                     <BoxView Color="White" Grid.Column="0" Grid.RowSpan="1"/>
                     <Image Source="historisk_placering.png" Grid.Row="0"/>
                     <Label Text="Historisk placering" FontSize="Medium" TextColor="#243F73" HorizontalOptions="Center" Grid.Row="1" Grid.Column="0" VerticalOptions="Start"/>
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="HistoricalStandings_Tapped" />
+                    </Grid.GestureRecognizers>
                 </Grid>
                 <!--===============================================================-->
 
