--- a/FodboldApp/FodboldApp/FodboldApp/Pages/POTY.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/Pages/POTY.xaml
@@ -4,13 +4,16 @@
              x:Class="FodboldApp.Pages.POTY"
              ControlTemplate="{StaticResource MainPageTemplate}">
   <ContentPage.Content>
-        <StackLayout x:Name="pageLayout">
-            <Label Text="ÅRETS SPILLER"
+        <ScrollView>
+            <StackLayout x:Name="pageLayout">
+                <Label Text="ÅRETS SPILLER"
                    HorizontalOptions="FillAndExpand"
                    HorizontalTextAlignment="Center"
                    FontSize="Large"
                    TextColor="{StaticResource textColor}"
                    BackgroundColor="#f0f0f0"/>
-        </StackLayout>
+                <Grid x:Name="grid"  RowSpacing = "0" ColumnSpacing = "0"/>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
